[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Walls.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Shuffle_Through_the_Night.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scripts/Music.gd" type="Script" id=5]
[ext_resource path="res://Sounds/Clap.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Interface.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Spawner.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Mob.tscn" type="PackedScene" id=10]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 180, 0, 0, 0, 0, 0, 180, 0, 0, 0, 0, 0, 0 )
}

[node name="World" type="Node"]

script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

friction = 0.1
bounce = 0.6

[node name="Walls" parent="." index="1" instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="." index="2"]

editor/display_folded = true
stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"
script = ExtResource( 5 )

[node name="Clap" type="AudioStreamPlayer" parent="Music" index="0"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Background" parent="." index="3" instance=ExtResource( 7 )]

[node name="Interface" parent="." index="4" instance=ExtResource( 8 )]

margin_left = -7.0
margin_right = 5.0
rect_min_size = Vector2( 0, 0 )

[node name="Spawner" type="Path2D" parent="." index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )
script = ExtResource( 9 )
Mob = ExtResource( 10 )

[node name="Spawn Location" type="PathFollow2D" parent="Spawner" index="0"]

offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[connection signal="beat_played" from="Music" to="Spawner" method="_on_Music_beat_played"]

[connection signal="beat_played" from="Music" to="Interface" method="_on_Music_beat_played"]

[connection signal="played_off_beat" from="Music" to="Interface" method="_on_Music_played_off_beat"]

[connection signal="played_on_beat" from="Music" to="Interface" method="_on_Music_played_on_beat"]


